Update datagenerator packate with UCL 2022 data.